# SimpleMJPEGPlayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
SimpleMJPEGPlayer/: CMakeLists.txt  SimpleMJPEGPlayer.cpp  SimpleMJPEGPlayer.h
